--- a/home/index.html
+++ b/home/index.html
@@ -392,7 +392,7 @@
 												</div>
 												<div id="{{'price_' + $index}}" class="row mt-0 collapse">
 													<div class="col">
-														<span class="text-muted">{{r.pub.type}} at {{r.pub.name}}, {{r.pub.town}}, {{r.pub.city}}, {{r.pub.country}}</span>
+														<span class="text-muted">{{r.pub.type}} {{r.pub.name}}, {{r.pub.town}}, {{r.pub.city}}, {{r.pub.country}}</span>
 													</div>
 												</div>
 											</div>
