--- a/home/test.html
+++ b/home/test.html
@@ -492,7 +492,7 @@
 			var app = angular.module('app', []);
 			app.controller('appCtrl', function($scope, $http, $location, $window) 
 			{
-				$scope.api_path = "api.howmuchisapint.com/service";
+				$scope.api_path = "api.howmuchisapint.com/test";
 				$scope.service_path = "https://" + $scope.api_path;
 
 				$scope.clean = function()
